--- a/back-end/package.json
+++ b/back-end/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.0",
     "express": "^4.17.1",
     "mysql2": "^2.0.0",
     "sequelize": "^5.21.2"
