--- a/back-end/package.json
+++ b/back-end/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "mysql2": "^2.0.0",
+    "nodemon": "^2.0.1",
     "sequelize": "^5.21.2"
   }
 }
