--- a/back-end/package.json
+++ b/back-end/package.json
@@ -14,5 +14,8 @@
     "express": "^4.17.1",
     "mysql2": "^2.0.0",
     "sequelize": "^5.21.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.1"
   }
 }
