--- a/front-end/package.json
+++ b/front-end/package.json
@@ -2,8 +2,10 @@
   "name": "Senac_Front",
   "version": "0.1.0",
   "private": true,
+  "description": "Senac Front-End Lapa tito",
   "dependencies": {
     "axios": "^0.19.0",
+    "bootstrap": "4.4.1",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-loading": "^2.0.3",
